# aa_standalone

./: Cargo.toml  README.md
src/: bundle.rs  comms.rs  gui.rs  main.rs  messages.rs  midi_device.rs  midi_utils.rs  standalone.rs  utils.rs
