[package]
name = "audioplugin_wasm"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web-view = { version = "0.6.3" }
#web-view = { path = "../audioplugin_wasm/external/web-view/" }
web-view = { git = "https://github.com/bgaster/web-view" }
# rust-embed = { version = "5.6.0", features = ["interpolate-folder-path"] }
# rocket = { version = "0.4.5", default-features = false }
# rocket_contrib = { version = "0.4.5" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57" }
serde_repr = { version = "0.1.6" }
curl = { version = "0.4.31"}
crossbeam-channel = { version = "0.4.3" }

# wasmer-runtime = { version = "0.17.1"}
# wasmer-runtime-core = { version = "0.17.1" }
# wasmer-llvm-backend = { version = "0.17.1" } 
# wasmer-runtime = { path = "../wasmer/lib/runtime"}
# wasmer-runtime-core = { path = "../wasmer/lib/runtime-core" }
# wasmer-llvm-backend = { path = "../wasmer/lib/llvm-backend"} 

aa_wasmtime = { path = "../aa_wasmtime/" }

anyhow = { version = "1.0.32" }
thiserror = { version = "1.0.20" }

portaudio = "0.7.0"
midir = { git = "https://github.com/bgaster/midir"}

[dependencies.rimd]
git = "https://github.com/RustAudio/rimd.git"